--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+php-java-bridge (6.1.2.1-1) unstable; urgency=low
+
+  * New upstream version.
+  * Correction of SE Linux Tomcat Debian patch.
+
+ -- Andre Felipe Machado <andre.machado@serpro.gov.br>  Mon, 04 May 2010 16:15:04 -0300
+
+
 php-java-bridge (6.1.2-1) unstable; urgency=low
 
   * New upstream version.
