--- a/tests.jsr223/test/README
+++ b/tests.jsr223/test/README
@@ -1,5 +1,3 @@
-This file contains tests for the JSR223 script interface.
+This file contains GUI tests for the JSR223 script interface.
 
-THESE FILES ARE TESTS, NOT EXAMPLES. Especially statements like
-"java_reset()" and "java_set_library_path()" should never be used
-outside of a test environment.
+JUnit tests should go to server/php/java/test
